# dns-server

core-module/: Cargo.toml
core-module/src/: lib.rs
core-module/src/authorities/: authority.rs
core-module/src/buffer/: buffer.rs
core-module/src/cache/: memory_cache.rs  mod.rs
core-module/src/client/: network_client.rs
core-module/src/network_utilities/: mod.rs  netutil.rs
core-module/src/protocols/: .protocol.rs.swp  protocol.rs
core-module/src/resolvers/: authoritative_resolver.rs  forwading_resolver.rs  mod.rs  recursive_resolver.rs  resolve.rs
core-module/src/server/: .context.rs.swp  context.rs
